# matome2.0

./: .gitignore  README.md  config.json  fix_test_config.py  fix_test_config2.py  main.py  marimo_edit_output.txt  marimo_output.txt  marimo_run_output.txt  marimo_sandbox_output.txt  patch_strict_typing.py  patch_strict_typing_2.py  patch_strict_typing_3.py  patch_strict_typing_4.py  pyproject.toml  test_proto.py  uv.toml  uvicorn_output.txt  uvicorn_output2.txt  uvicorn_output3.txt
dev_documents/: ALL_SPEC.md  USER_TEST_SCENARIO.md  test_execution_log.txt
dev_documents/system_prompts/: ARCHITECT_INSTRUCTION.md  AUDITOR_INSTRUCTION.md  CODER_INSTRUCTION.md  REFACTOR_AUDITOR_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md
dev_documents/system_prompts/CYCLE01/: SPEC.md  UAT.md  test_execution_log.txt
dev_documents/system_prompts/CYCLE02/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE03/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE04/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE05/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE06/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE07/: SPEC.md  UAT.md
dev_documents/system_prompts/CYCLE08/: SPEC.md  UAT.md
dev_documents/system_prompts_phase01/: ARCHITECT_INSTRUCTION.md  REFACTOR_INSTRUCTION.md  SYSTEM_ARCHITECTURE.md  project_state.json
dev_documents/system_prompts_phase01/tutorials/: UAT_AND_TUTORIAL.py
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/routers/: base.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  utils.py
src/domain/: __init__.py  exceptions.py
src/domain/models/: __init__.py  base.py  board.py  config.py  document.py  factory.py  manifest.py  node.py
src/domain/ports/: http.py  llm.py  storage.py  vector_store.py
src/domain_models/: __init__.py  chunk.py  config.py  document.py  interaction_state.py  knowledge_node.py  manifest.py  node.py  pivot_graph.py
src/infrastructure/: factories.py  http.py  llm.py  llm_interface.py  openrouter_llm.py  pinecone_vdb.py  storage.py  vdb_interface.py  vector_store.py
src/services/: base_service.py
testfiles/: test_text.txt
tests/: conftest.py
tests/api/routers/: test_base.py
tests/core/: test_config.py  test_exceptions.py
tests/domain_models/: test_chunk.py  test_document.py  test_interaction_state.py  test_knowledge_node.py  test_pivot_graph.py
tests/integration/: test_pipeline.py
tests/performance/: test_large_dataset.py
tests/services/: test_base_service.py
tests/uat/: test_uat.py
tests/unit/: test_config.py  test_dependencies.py  test_domain_exceptions.py  test_domain_factory.py  test_domain_models.py  test_manifest.py  test_models.py  test_utils.py
tests/unit/api/: test_base.py  test_dependencies.py
tests/unit/domain_models/: test_chunk.py  test_config.py  test_document.py  test_node.py
tests/unit/infrastructure/: patch_test_factories.py  test_data_factory.py  test_factories.py  test_http.py  test_llm.py  test_storage.py  test_vector_store.py
tests/unit/services/: test_base_service.py
tutorials/: UAT_AND_TUTORIAL.py  tutorial_config.py  tutorial_domain.py
